fix: remove publications surface
